--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "18.2.0",
         "react-bootstrap": "^2.4.0",
         "react-dom": "18.2.0",
+        "react-modal": "^3.16.1",
         "reactstrap": "^9.2.0",
         "swr": "^2.2.0",
         "tailwindcss": "3.3.2"
